--- a/sanic_sortlist/pyproject.toml
+++ b/sanic_sortlist/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "sanic (>=25.3.0,<26.0.0)"
+    "sanic (>=25.3.0,<26.0.0)",
+    "sanic-ext (>=24.12.0,<25.0.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 
